--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,6 +26,7 @@ services:
     ports:
       - "8080:8080"
     environment:
+      - SPRING_PROFILES_ACTIVE=container
       - SPRING_DATASOURCE_URL=jdbc:h2:tcp://h2db:1521/./testdb
       - SPRING_REDIS_HOST=redis
       - SPRING_REDIS_PORT=6379
@@ -41,6 +42,7 @@ services:
     ports:
       - "8081:8080"
     environment:
+      - SPRING_PROFILES_ACTIVE=container
       - SPRING_DATASOURCE_URL=jdbc:h2:tcp://h2db:1521/./testdb
       - SPRING_REDIS_HOST=redis
       - SPRING_REDIS_PORT=6379
