--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,23 +1,9 @@
 spring:
-  datasource:
-    url: jdbc:h2:tcp://localhost:9092/./testdb
-    driver-class-name: org.h2.Driver
-    username: sa
-    password:
   h2:
     console:
       enabled: true
-  data:
-    redis:
-      host: redis
-      port: 6379
   sql:
     init:
       schema-locations: classpath:initialize_table.sql
-      mode: always
-
-logging:
-  level:
-    org.hibernate.type.descriptor.sql:
-      BasicBinder: TRACE
-    org.springframework: DEBUG
+  profiles:
+    active: local
