chore: 인수테스트를 위한 Restassured 의존성 추가

--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
     implementation 'org.mindrot:jbcrypt:0.4'
+
+    testImplementation 'io.rest-assured:rest-assured'
 }
 
 tasks.named('test') {
