--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,16 +5,15 @@ services:
     image: oscarfonts/h2
     container_name: h2db
     ports:
-      - "9092:1521" # tcp 포트
-      - "8082:81"   # 웹 콘솔 포트
+      - "9092:1521"
+      - "8082:81"
     volumes:
-      - ./h2-data:/opt/h2-data  # 호스트의 ./h2-data 디렉토리를 컨테이너의 /opt/h2-data 디렉토리로 매핑
+      - ./h2-data:/opt/h2-data
     environment:
       - H2_OPTIONS=-tcp -tcpAllowOthers -ifNotExists -baseDir /opt/h2-data
 
   redis:
     image: redis
-    container_name: redis
     ports:
       - "6379:6379"
 
@@ -22,14 +21,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: jinkshower_1
     ports:
       - "8080:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=container
-      - SPRING_DATASOURCE_URL=jdbc:h2:tcp://h2db:1521/./testdb
-      - SPRING_REDIS_HOST=redis
-      - SPRING_REDIS_PORT=6379
     depends_on:
       - redis
       - h2
@@ -38,14 +33,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: jinkshower_2
     ports:
       - "8081:8080"
     environment:
       - SPRING_PROFILES_ACTIVE=container
-      - SPRING_DATASOURCE_URL=jdbc:h2:tcp://h2db:1521/./testdb
-      - SPRING_REDIS_HOST=redis
-      - SPRING_REDIS_PORT=6379
     depends_on:
       - redis
       - h2
