--- a/src/main/resources/application-container.yml
+++ b/src/main/resources/application-container.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost:9092/./testdb
+    url: jdbc:h2:tcp://h2:1521/./testdb
     driver-class-name: org.h2.Driver
     username: sa
     password:
@@ -11,9 +11,3 @@ spring:
   sql:
     init:
       mode: always
-
-logging:
-  level:
-    org.hibernate.type.descriptor.sql:
-      BasicBinder: TRACE
-    org.springframework: DEBUG
