feat: embedded redis를 이용해 테스트에서 실 redis 분리

--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,8 @@ dependencies {
 
     asciidoctorExt 'org.springframework.restdocs:spring-restdocs-asciidoctor'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
+    //테스트를 위한 embeddedRedis추가
+    implementation 'it.ozimov:embedded-redis:0.7.2'
 }
 
 tasks.named('test') {
