--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,16 @@ jobs:
       - name: 테스트를 실행합니다
         run: ./gradlew --info test
 
+      - name: gradle을 캐싱합니다.
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
+
       - name: 테스트 결과를 공지합니다
         uses: EnricoMi/publish-unit-test-result-action@v1
         if: ${{ always() }}
