--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,5 @@ out/
 ### VS Code ###
 .vscode/
 /src/main/resources/binary-redis/dump.rdb
+/src/main/resources/application-prod.yml
+docker-compose-ncp.yml
