--- a/build.gradle
+++ b/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     annotationProcessor 'org.projectlombok:lombok'
     runtimeOnly 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    runtimeOnly 'com.mysql:mysql-connector-j'
 
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
