--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -27,9 +27,23 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
             ${{ runner.os }}-
-            
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
+
+      # gradle chmod
+      - name: Grant execute permission for gradlew
+        run: chmod +x gradlew
+
+      - name: Set up environment variables
+        run: |
+          touch ./src/main/resources/application-prod.yml
+          echo "${{ secrets.APPLICATION_PROD_YML }}" > ./src/main/resources/application-prod.yml
+          cat ./src/main/resources/application-prod.yml
+
+      # gradle build
+      - name: Build with Gradle
+        run: ./gradlew build
 
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
@@ -52,8 +66,10 @@ jobs:
           host: ${{ secrets.HOST_PUBLIC_IP }}
           username: ${{ secrets.HOST_USERNAME }}
           port: ${{ secrets.WAS_SSH_PORT }}
-          key: ${{ secrets.WAS_PRIVATE_KEY }}
+          password: ${{ secrets.WAS_PASSWORD }}
           script: |
             docker-compose -f docker-compose-hiyen.yml down
+            docker-compose -f docker-compose-hiyen.yml pull app
             docker-compose -f docker-compose-hiyen.yml build
             docker-compose -f docker-compose-hiyen.yml up -d
+            docker image prune -a
