--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,12 +4,12 @@ services:
   h2:
     image: oscarfonts/h2
     ports:
-      - "9092:1521"
+      - "1521:1521"
       - "8082:81"
     volumes:
       - ./h2-data:/opt/h2-data
     environment:
-      - H2_OPTIONS=-tcp -tcpAllowOthers -ifNotExists -baseDir /opt/h2-data
+      - H2_OPTIONS=-ifNotExists
 
   redis:
     image: redis
