chore: 스크립트에 설명, 브랜치명 통일

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,7 @@ name: ci
 
 on:
   pull_request:
-    branches:
-      - main
-      - dev
+    branches: [main]
       
 permissions:
   contents: read
