--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: 리포지토리를 checkout합니다.
         uses: actions/checkout@v4
 
       - name: 자바를 설치합니다.
@@ -28,30 +28,28 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-
 
-      - name: Set up Docker Buildx
+      - name: Docker Buildx를 설치합니다.
         uses: docker/setup-buildx-action@v2
 
-      # gradle chmod
-      - name: Grant execute permission for gradlew
+      - name: 실행권한을 부여합니다.
         run: chmod +x gradlew
 
-      - name: Set up environment variables
+      - name: 환경파일을 만듭니다.
         run: |
           touch ./src/main/resources/application-prod.yml
           echo "${{ secrets.APPLICATION_PROD_YML }}" > ./src/main/resources/application-prod.yml
           cat ./src/main/resources/application-prod.yml
 
-      # gradle build
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: 프로젝트를 빌드합니다.
+        run: ./gradlew bootJar
 
-      - name: Log in to Docker Hub
+      - name: Docker Hub에 로그인합니다.
         uses: docker/login-action@v2
         with:
           username: ${{ secrets.DOCKER_EMAIL }}
           password: ${{ secrets.DOCKER_ACCESS_TOKEN }}
 
-      - name: Build and push Docker image
+      - name: Dockerfile을 빌드하고 이미지를 Docker Hub에 푸시합니다.
         uses: docker/build-push-action@v4
         with:
           context: .
@@ -59,8 +57,7 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_USERNAME }}/session-cluster:latest
 
-      ## deploy
-      - name: Deploy
+      - name: 배포합니다.
         uses: appleboy/ssh-action@master
         with:
           host: ${{ secrets.HOST_PUBLIC_IP }}
@@ -72,4 +69,4 @@ jobs:
             docker-compose -f docker-compose-hiyen.yml pull app
             docker-compose -f docker-compose-hiyen.yml build
             docker-compose -f docker-compose-hiyen.yml up -d
-            docker image prune -a
+            docker image prune -a -f
